Remove fixed positioning and center text alignment from form in style.css

--- a/style.css
+++ b/style.css
@@ -47,8 +47,6 @@ h1, h2 {
 }
 
 form {
-    position: fixed;
-    text-align: center;
     display: flex;
     flex-direction: column;
     width: 50%;
